<resources>
    <string name="app_name">Biblioteca de bolso</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_username">username</string>
    <string name="button_register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Books</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_app_name">Biblioteca de bolso</string>
    <string name="label_login">Login</string>
    <string name="label_register">Registrar</string>
    <string name="label_user_logged">You are logged</string>
    <string name="label_you_dont_have_connection">You don\'t have internet connection</string>
    <string name="label_incorrect_credentials">Your credentials are not valid parameters</string>
    <string name="label_loading">Loading…</string>
    <string name="label_server_not_return_correctly">Error: Can\'t collect any data of the server</string>
    <string name="label_logout">Logout</string>
    <string name="drawer_label_open">open</string>
    <string name="drawer_label_close">close</string>
    <string name="label_add_book">Add your book</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="add_book_options_fragment_label">Add your book - Options</string>
    <string name="add_book_offline_fragment_label">Add your Book - Add your own book</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="label_search_online">Find your book on google books</string>
    <string name="label_add_your_own_book">Add your custom book</string>
    <string name="label_would_like_add">How you would like to add?</string>
    <string name="label_author">author</string>
    <string name="label_title">title</string>
    <string name="label_publisher">publisher</string>
    <string name="label_description">description</string>
    <string name="error_must_be_beetween_1_128">Must be between 1 and 128</string>
    <string name="error_must_be_between_0_128">Must be between 0 and 128</string>
    <string name="error_must_be_between_0_5000">Must be between 0 and 5000</string>
    <string name="label_isbn_10_or_13">isbn10 or isbn13</string>
    <string name="label_book_image">Book Image</string>
    <string name="label_loading_book_list">Loading book list</string>
    <string name="label_search">Search</string>
    <string name="label_sorry_we_not_found_a_book_with_filters">Sorry, we not found a single book with theses filters</string>
    <string name="label_add_an_annotation">Add an annotation</string>
    <string name="label_create_annotation">create annotation</string>
    <string name="label_book_not_valid">This book is not valid</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="label_successfully_registered">Registered successfully! Check your email to activate your account</string>
    <string name="label_empty_email">Email can not be empty</string>
    <string name="title_activity_delete_account">Delete account</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label_are_you_sure_delete_account">Are you sure you want to delete your account?</string>
    <string name="label_type_password_to_delete_account">If you really want to delete your account, type your password here</string>
    <string name="label_disable_account">Delete account</string>
    <string name="label_about">About</string>
    <string name="label_account_deleted">Account deleted successfully</string>
    <string name="label_options">Options</string>
    <string name="annotation_placeholder_insert_text_here">Insert text here…</string>
    <string name="label_save_annotation">Save annotation</string>
    <string name="alert_token_expired">Token expired, please log in again</string>
    <string name="label_edit_book">Edit book</string>
    <string name="label_book_not_found">Book not found</string>
    <string name="label_book_details">Book details</string>
    <string name="label_show_more">Show more</string>
    <string name="error_invalid_token">Invalid Token! Please log in again</string>
    <string name="label_loading_three_dots">loading…</string>
    <string name="label_Description">Description</string>
    <string name="label_annotations">Annotations</string>
    <string name="label_abstracts">Abstracts</string>
    <string name="label_add_annotation_or_abstract">Add an annotation or abstract</string>
    <string name="label_no_internet_connection">No internet connection</string>
    <string name="label_show_less">show less</string>
    <string name="label_are_you_sure">Are you sure?</string>
    <string name="label_are_you_sure_delete_book">Are you sure you want to delete this book?</string>
    <string name="label_are_you_sure_delete_borrow">Are you sure you want to delete this borrow?</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_delete">delete</string>
    <string name="label_book_removed">Book removed successfully</string>
    <string name="label_reference_with_example" translatable="false">Loc: Cap.X</string>
    <string name="label_annotation_saved_successfully">Annotation saved successfully!</string>
    <string name="label_action_not_valid">Action type not valid</string>
    <string name="label_annotation_id_not_valid">Annotation ID invalid</string>
    <string name="label_book_id_not_valid">Book ID invalid</string>
    <string name="label_book_updated_sucessfully">Book updated successfully</string>
    <string name="label_update">Update</string>
    <string name="label_book_status_updated">Book status updated</string>
    <string name="label_image_compressed">Image compressed</string>
    <string name="label_compressing_image">Compressing image</string>
    <string name="label_updated_successfully">Updated successfully</string>
    <string name="label_theres_not_an_image_to_update">There\'s not an image to update</string>
    <string name="label_book_created">Book Created</string>
    <string name="label_book_list_empty">There\'re no books in this category</string>
    <string name="label_reading">Reading</string>
    <string name="label_planning_to_read">Planning to read</string>
    <string name="label_concluded">Concluded</string>
    <string name="label_dropped">Dropped</string>
    <string name="label_invalid_read_status">Invalid read status</string>
    <string name="label_book">Books:</string>
    <string name="label_book_unique">Book</string>
    <string name="label_reached_in_the_end">Reached in the end</string>
    <string name="label_annotation_image">annotation image</string>
    <string name="label_more_info">More info</string>
    <string name="label_lendings">Borrows</string>
    <string name="label_no_description">No description</string>
    <string name="title_borrow">Borrows</string>
    <string name="label_returned">Returned</string>
    <string name="label_borrowed">Borrowed</string>
    <string name="label_x_month_ago">%1$s month ago</string>
    <string name="label_x_months_ago">%1$s months ago</string>
    <string name="label_x_week_ago">%1$s week ago</string>
    <string name="label_x_weeks_ago">%1$s weeks ago</string>
    <string name="label_x_day_ago">%1$s day ago</string>
    <string name="label_x_days_ago">%1$s days ago</string>
    <string name="label_x_hour_ago">%1$s hour ago</string>
    <string name="label_x_hours_ago">%1$s hours ago</string>
    <string name="label_x_minute_ago">%1$s minute ago</string>
    <string name="label_x_minutes_ago">%1$s minutes ago</string>
    <string name="label_x_second_ago">%1$s second ago</string>
    <string name="label_x_seconds_ago">%1$s seconds ago</string>
    <string name="label_contact_name">Contact name</string>
    <string name="label_add_your_loan">Add your loan</string>
    <string name="label_who_did_you_loan_it_to">Who did you loan it to?</string>
    <string name="label_select_book">Select book</string>
    <string name="label_profile">Profile</string>
    <string name="label_edit">Edit</string>
    <string name="label_borrow_status">Borrow status:</string>
    <string name="label_permission_granted_restart_app">Permission granted, restart your app to apply your changes</string>
    <string name="label_permission_not_granted">Permission not granted!</string>
    <string-array name="spinner_book_reading_status_value">
        <item>Planning</item>
        <item>Reading</item>
        <item>Concluded</item>
        <item>Dropped</item>
    </string-array>
    <string-array name="spinner_book_borrow_status_value">
        <item>Pending</item>
        <item>Returned</item>
    </string-array>
    <string name="label256character" translatable="false">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="book_already_borrowed_select_other">Book already borrowed. Select other book</string>
    <string name="label_empty">Empty</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="label_link_app_icon"><![CDATA[https://br.freepik.com/vetores-gratis/bonito-astronauta-lendo-livro-cartoon-ilustracao-icone-do-vetor-conceito-de-icone-de-educacao-cientifica-isolado-vetor-premium-estilo-de-desenho-animado-plano_22750868.htm#&position=3&from_view=detail#&position=3&from_view=detail]]></string>
    <string name="label_app_icon">App icon</string>
    <string name="label_app_font">\'biblioteca de bolso\' font family</string>
    <string name="label_app_link_font">https://fonts.google.com/specimen/Glass+Antiqua</string>
    <string name="label_splash_screen">Splash screen</string>
    <string name="label_link_splash_screen">https://br.freepik.com/vetores-gratis/fundo-de-galaxia-de-desenho-animado_14350787.htm?query=space%20cartoon</string>
    <string name="label_login_screen">Login screen</string>
    <string name="label_link_bg_login_screen"><![CDATA[https://www.freepik.com/free-vector/interior-living-room-with-sofa_6993916.htm#query=cartoon%20bookshelf&position=4&from_view=keyword]]></string>
    <string name="label_book_icon">Book icon</string>
    <string name="label_link_book_icon">https://www.svgrepo.com/svg/79628/book</string>
    <string name="label_other_icons">Other icons</string>
    <string name="label_link_materialdesignicons">https://materialdesignicons.com/</string>
    <string name="about_text_1">Biblioteca de bolso it\'s an application for you to manage your books\n\nWith this app, you can:</string>
    <string name="about_text_2_item_1">- Manage what books you\'ve read, what books you\'re currently reading, plan to read or dropped</string>
    <string name="about_text_2_item_2">- Concentrate your book notes in one place</string>
    <string name="about_text_2_item_3">- Manage your borrowed books</string>
    <string name="label_utilized_images">Utilized imaegs</string>
    <string name="about_utilized_images_label_1">The images used in the application are for use with attribution required\n</string>
</resources>