<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bibliotecadebolso.app.ui.home.ui.bookList.BookListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_book_list" />

    <fragment
        android:id="@+id/navigation_borrow"
        android:name="com.bibliotecadebolso.app.ui.home.ui.borrowList.BorrowFragment"
        android:label="@string/title_borrow"
        tools:layout="@layout/fragment_borrow" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.bibliotecadebolso.app.ui.home.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>