<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:background="@color/splash_screen_dark_purple"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_would_like_add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_search_online"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_search_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_search_online"
        android:background="@color/gd_blue_purple_1"
        app:layout_constraintBottom_toTopOf="@id/btn_add_own_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_add_own_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_add_your_own_book"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/gd_blue_purple_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search_online" />
</androidx.constraintlayout.widget.ConstraintLayout>